plugins {
  id 'io.github.gradle-nexus.publish-plugin' version '2.0.0'
}

group = (findProperty('GROUP') ?: 'org.ngengine')
version = (findProperty('VERSION_NAME') ?: '0.1.0-SNAPSHOT')

allprojects {
  repositories {
    mavenCentral()
  }
}

subprojects {
  apply plugin: 'java-library'
  apply plugin: 'maven-publish'
  apply plugin: 'signing'

  group = rootProject.group
  version = rootProject.version

  java {
    toolchain {
      languageVersion = JavaLanguageVersion.of(8)
      vendor = JvmVendorSpec.ADOPTIUM
    }
    withSourcesJar()
    withJavadocJar()
  }

  tasks.withType(Javadoc).configureEach {
    options.addBooleanOption('Xdoclint:none', true)
  }

  publishing {
    publications {
      mavenJava(MavenPublication) {
        from components.java
        artifactId = project.name

        pom {
          name = (findProperty('POM_NAME') ?: project.name)
          description = (findProperty('POM_DESCRIPTION') ?: project.description)
          inceptionYear = (findProperty('POM_INCEPTION_YEAR') ?: '2026')
          url = (findProperty('POM_URL') ?: '')

          licenses {
            license {
              name = (findProperty('POM_LICENSE_NAME') ?: 'Apache-2.0')
              url = (findProperty('POM_LICENSE_URL') ?: 'https://www.apache.org/licenses/LICENSE-2.0.txt')
              distribution = (findProperty('POM_LICENSE_DIST') ?: 'repo')
            }
          }
          developers {
            developer {
              id = (findProperty('POM_DEVELOPER_ID') ?: 'ngengine')
              name = (findProperty('POM_DEVELOPER_NAME') ?: 'Nostr Game Engine')
              url = (findProperty('POM_DEVELOPER_URL') ?: 'https://github.com/ngengine')
            }
          }
          scm {
            url = (findProperty('POM_SCM_URL') ?: '')
            connection = (findProperty('POM_SCM_CONNECTION') ?: '')
            developerConnection = (findProperty('POM_SCM_DEV_CONNECTION') ?: '')
          }
        }
      }
    }

    repositories {
      maven {
        name = 'GitHubPackages'
        url = uri("https://maven.pkg.github.com/${System.getenv('GITHUB_REPOSITORY') ?: 'NostrGameEngine/saferalloc'}")
        credentials {
          username = System.getenv('GITHUB_ACTOR') ?: (findProperty('gpr.user') ?: '')
          password = System.getenv('GITHUB_TOKEN') ?: (findProperty('gpr.key') ?: '')
        }
      }
    }
  }

  signing {
    def signingKey = (findProperty('signingInMemoryKey') ?: findProperty('signingKey'))
    def signingPassword = (findProperty('signingInMemoryKeyPassword') ?: findProperty('signingPassword'))

    if (signingKey != null && signingKey.toString().trim()) {
      useInMemoryPgpKeys(signingKey.toString(), signingPassword?.toString())
      sign publishing.publications.mavenJava
    }
  }
}

nexusPublishing {
  repositories {
    sonatype {
      nexusUrl = uri('https://ossrh-staging-api.central.sonatype.com/service/local/')
      snapshotRepositoryUrl = uri('https://central.sonatype.com/repository/maven-snapshots/')
    }
  }
}
